feat: HTTP API for fetching Playlist data - Active Playlist WIP
