# packages/openapi/api/definitions/playlists.yaml
@@ -26,6 +26,41 @@ resources:
                       - id: 'OKAgZmZ0Buc99lE_2uPPSKVbMrQ_'
         500:
           $ref: '#/components/responses/internalServerError'
+  playlist:
+    get:
+      operationId: playlist
+      tags:
+        - playlist
+      summary: Returns an LSG object of a playlist
+      description: Returns an LSG object of a playlist
+      parameters:
+        - name: playlistId
+          in: path
+          description: Requested playlist.
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Command successfully handled - Returns an LSG object of a playlist.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 200
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/playlistItem'
+                    example:
+                      - id: 'OKAgZmZ0Buc99lE_2uPPSKVbMrQ_'
+        404:
+          $ref: '#/components/responses/playlistNotFound'
+        500:
+          $ref: '#/components/responses/internalServerError'
   activate:
     put:
       operationId: activate
@@ -728,6 +763,311 @@ components:
         - id
         - externalId
       additionalProperties: false
+    playlist:
+      type: object
+      title: ActivePlaylistEvent
+      properties:
+        id:
+          description: Unique id of the active playlist
+          oneOf:
+            - type: string
+            - type: 'null'
+        name:
+          description: User-presentable name for the active playlist
+          type: string
+        rundownIds:
+          description: The set of rundownIds in the active playlist, in order
+          type: array
+          items:
+            type: string
+        currentPart:
+          description: The current Part - if empty, no part in the active playlist is live
+          $ref: '#/components/schemas/currentPart'
+        currentSegment:
+          description: The Segment of the current Part - if empty, no part in the active playlist is live
+          $ref: '#/components/schemas/currentSegment'
+        nextPart:
+          description: The next Part - if empty, no part will follow live part
+          $ref: '#/components/schemas/part'
+        publicData:
+          description: Optional arbitrary data
+        timing:
+          description: Timing information about the active playlist
+          type: object
+          title: ActivePlaylistTiming
+          properties:
+            timingMode:
+              description: 'Timing mode for the playlist.'
+              type: string
+              title: ActivePlaylistTimingMode
+              enum:
+                - none
+                - forward-time
+                - back-time
+            startedPlayback:
+              description: Unix timestamp of when the playlist started (milliseconds)
+              type: number
+            expectedStart:
+              description: Unix timestamp of when the playlist is expected to start (milliseconds). Required when the timingMode is set to forward-time.
+              type: number
+            expectedDurationMs:
+              description: Duration of the playlist in ms
+              type: number
+            expectedEnd:
+              description: Unix timestamp of when the playlist is expected to end (milliseconds) Required when the timingMode is set to back-time.
+              type: number
+          required: [timingMode]
+          additionalProperties: false
+        quickLoop:
+          description: Information about the current quickLoop, if any
+          type: object
+          title: ActivePlaylistQuickLoop
+          properties:
+            locked:
+              description: Whether the user is allowed to make alterations to the Start/End markers
+              type: boolean
+            running:
+              description: Whether the loop has two valid markers and is currently running
+              type: boolean
+            start:
+              description: The start of the loop
+              $ref: '#/components/schemas/quickLoopMarker'
+            end:
+              description: The end of the loop
+              $ref: '#/components/schemas/quickLoopMarker'
+          required: [locked, running]
+      required: [id, name, rundownIds, currentPart, currentSegment, nextPart, timing]
+      additionalProperties: false
+      examples:
+        - id: 'OKAgZmZ0Buc99lE_2uPPSKVbMrQ_'
+          name: 'Playlist 0'
+          rundownIds: ['y9HauyWkcxQS3XaAOsW40BRLLsI_']
+          currentPart:
+            $ref: '#/components/schemas/currentPart/examples/0'
+          currentSegment:
+            $ref: '#/components/schemas/currentSegment/examples/0'
+          nextPart:
+            $ref: '#/components/schemas/part/examples/0'
+          publicData:
+            category: 'Evening News'
+          timing:
+            timingMode: 'forward-time'
+            expectedStart: 1728895750727
+            expectedDurationMs: 180000
+    partBase:
+      type: object
+      title: PartStatus
+      properties:
+        id:
+          description: Unique id of the part
+          type: string
+        name:
+          description: User name of the part
+          type: string
+        segmentId:
+          description: Unique id of the segment this part belongs to
+          type: string
+        autoNext:
+          description: If this part will progress to the next automatically
+          type: boolean
+          default: false
+        pieces:
+          description: All pieces in this part
+          type: array
+          items:
+            $ref: '#/components/schemas/piece'
+        publicData:
+          description: Optional arbitrary data
+      required: [id, name, segmentId, pieces]
+      # additionalProperties: false
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          name: 'Intro'
+          segmentId: 'n1mOVd5_K5tt4sfk6HYfTuwumGQ_'
+          autoNext: false
+          pieces:
+            - $ref: '#/components/schemas/piece/examples/0'
+          publicData:
+            partType: 'intro'
+    currentSegmentPart:
+      type: object
+      title: CurrentSegmentPart
+      properties:
+        id:
+          description: Unique id of the part
+          type: string
+        name:
+          description: User-presentable name of the part
+          type: string
+        autoNext:
+          description: If this part will progress to the next automatically
+          type: boolean
+          default: false
+        timing:
+          type: object
+          title: CurrentSegmentPartTiming
+          properties:
+            expectedDurationMs:
+              description: Expected duration of the part
+              type: number
+      required: [id, name, timing]
+      additionalProperties: false
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          name: 'Intro'
+          timing:
+            expectedDurationMs: 15000
+    part:
+      oneOf:
+        - $ref: '#/components/schemas/partBase'
+        - type: 'null'
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          name: 'Intro'
+          segmentId: 'n1mOVd5_K5tt4sfk6HYfTuwumGQ_'
+          autoNext: false
+          pieces:
+            - $ref: '#/components/schemas/piece/examples/0'
+    currentPart:
+      oneOf:
+        - title: CurrentPartStatus
+          allOf:
+            - $ref: '#/components/schemas/partBase'
+            - type: object
+              properties:
+                timing:
+                  description: Timing information about the current part
+                  type: object
+                  title: CurrentPartTiming
+                  properties:
+                    startTime:
+                      description: Unix timestamp of when the part started (milliseconds)
+                      type: number
+                    expectedDurationMs:
+                      description: Expected duration of the part (milliseconds)
+                      type: number
+                    projectedEndTime:
+                      description: Unix timestamp of when the part is projected to end (milliseconds). A sum of `startTime` and `expectedDurationMs`.
+                      type: number
+                  required: [startTime, expectedDurationMs, projectedEndTime]
+              required: [timing]
+        - type: 'null'
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          name: 'Intro'
+          segmentId: 'n1mOVd5_K5tt4sfk6HYfTuwumGQ_'
+          autoNext: false
+          timing:
+            startTime: 1600000060000
+            expectedDurationMs: 15000
+            projectedEndTime: 1600000075000
+          pieces:
+            - $ref: '#/components/schemas/piece/examples/0'
+          publicData:
+            partType: 'intro'
+    currentSegment:
+      oneOf:
+        - type: object
+          title: CurrentSegment
+          properties:
+            id:
+              description: Unique id of the segment
+              type: string
+            timing:
+              description: Timing information about the current segment
+              type: object
+              title: CurrentSegmentTiming
+              properties:
+                expectedDurationMs:
+                  description: Expected duration of the segment
+                  type: number
+                budgetDurationMs:
+                  description: Budget duration of the segment
+                  type: number
+                projectedEndTime:
+                  description: Unix timestamp of when the segment is projected to end (milliseconds). The time this segment started, offset by its budget duration, if the segment has a defined budget duration. Otherwise, the time the current part started, offset by the difference between expected durations of all parts in this segment and the as-played durations of the parts that already stopped.
+                  type: number
+                countdownType:
+                  description: 'Countdown type within the segment. Default: `part_expected_duration`'
+                  type: string
+                  title: SegmentCountdownType
+                  enum:
+                    - part_expected_duration
+                    - segment_budget_duration
+              required: [expectedDurationMs, projectedEndTime]
+            parts:
+              type: array
+              items:
+                $ref: '#/components/schemas/currentSegmentPart'
+          required: [id, timing, parts]
+          additionalProperties: false
+        - type: 'null'
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          timing:
+            expectedDurationMs: 15000
+            budgetDurationMs: 20000
+            projectedEndTime: 1600000075000
+            countdownType: segment_budget_duration
+          parts:
+            - $ref: '#/components/schemas/currentSegmentPart/examples/0'
+    piece:
+      type: object
+      title: PieceStatus
+      properties:
+        id:
+          description: Unique id of the Piece
+          type: string
+        name:
+          description: User-facing name of the Piece
+          type: string
+        sourceLayer:
+          description: The source layer name for this Piece
+          type: string
+        outputLayer:
+          description: The output layer name for this Piece
+          type: string
+        tags:
+          description: Tags attached to this Piece
+          type: array
+          items:
+            type: string
+        publicData:
+          description: Optional arbitrary data
+      required: [id, name, sourceLayer, outputLayer]
+      additionalProperties: false
+      examples:
+        - id: 'H5CBGYjThrMSmaYvRaa5FVKJIzk_'
+          name: 'Camera 1'
+          sourceLayer: 'Camera'
+          outputLayer: 'PGM'
+          tags: ['camera']
+          publicData:
+            switcherSource: 1
+    quickLoopMarker:
+      type: object
+      title: QuickLoopMarker
+      properties:
+        markerType:
+          description: The type of entity the marker is locked to
+          title: QuickLoopMarkerType
+          type: string
+          enum:
+            - playlist
+            - rundown
+            - segment
+            - part
+        rundownId:
+          description: The rundown that this marker references. This will be set for rundown, segment and part markers
+          type: string
+        segmentId:
+          description: The segment that this marker references. This will be set for segment and part markers
+          type: string
+        partId:
+          description: The part that this marker references. This will be set for only part markers
+          type: string
+      required: [markerType]
+# END OF PLAYLIST SCHEMAS
   responses:
     putSuccess:
       description: Action successfully sent
